# IPv4_Manager

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  toolchain.cmake
app/: main.c
src/: CMakeLists.txt  ip_manager.c  ip_manager.h
src/hash_table/: CMakeLists.txt  hash_table.c  hash_table.h
src/ip_manager/: CMakeLists.txt  ip_manager.c  ip_manager.h
src/trie_data/: CMakeLists.txt  trie_data.c  trie_data.h
